[package]
name = "banana_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-native-certs = "0.7"   # para cargar CA del sistema
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
rustls-pemfile = "1.0"
rpassword = "7.4.0"
zeroize = "1.8.2"
regex = "1.12.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mpsc = "0.2.6"
